--- a/metadata.yaml
+++ b/metadata.yaml
@@ -40,5 +40,6 @@ subjects:
 - !lcc 'DA'
 - !lcsh 'Princes -- Great Britain -- Biography'
 - !lcsh 'Princesses -- Great Britain -- Biography'
+- GITenberg
 title: Royal Children of English History
 url: http://www.gutenberg.org/ebooks/30167
